--- a/monopalace/src/assets/sass/m/landing.min.scss
+++ b/monopalace/src/assets/sass/m/landing.min.scss
@@ -2,6 +2,8 @@
 @import './override';
 
 .sec.landing {
+    display: none;
+
     .title-type1 {
         margin-bottom: 15px;
         text-align: center;
