--- a/monopalace/src/assets/sass/m/landing/contents.min.scss
+++ b/monopalace/src/assets/sass/m/landing/contents.min.scss
@@ -1,5 +1,5 @@
-@import './landing/common';
-@import './override';
+@import './common';
+@import '../override';
 
 
 .sec.landing {
@@ -18,6 +18,11 @@
         // font-weight: 300;
         line-height: 1.25;
         text-align: center;
+
+        @include screen-xxs {
+            font-size: 13px !important;
+            letter-spacing: -0.7px;
+        }
     }
 
     &.inquiry-visual-sec {
@@ -25,12 +30,22 @@
             .visual-content {
 
                 .banner {
+                    display: flex;
+                    flex-wrap: wrap;
+                    align-items: center;
+                    justify-content: center;
                     height: 460px;
                     padding: 0 10px;
-                    padding-top: 20px;
-                    background: url(/img/m/landing/inquiry/visual/bg.png) no-repeat center top / cover;
+                    // padding-top: 20px;
+                    background: url(http://img.monopalace.com/m/landing/inquiry/visual/bg.png) no-repeat center top / cover;
                     box-sizing: border-box;
                     text-align: center;
+
+                    .title {
+                        >img {
+                            max-height: 170px;
+                        }
+                    }
 
                     .picture {
                         margin-top: 10px;
@@ -41,20 +56,24 @@
                             display: block;
                             margin: 0 auto;
                             right: -8px;
+                            max-height: 233px;
                         }
                     }
                 }
 
                 .bannerbar {
                     position: relative;
-                    height: 90px;
-                    padding: 7px 30px;
+                    // height: 90px;
+                    padding: 12px 30px;
                     background-color: #07076a;
                     box-sizing: border-box;
                     display: flex;
                     align-items: center;
                     justify-content: center;
 
+                    >img {
+                        max-height: 66px;
+                    }
                 }
             }
         }
@@ -73,12 +92,21 @@
                     font-size: 14px;
                     line-height: 1.428;
 
+                    @include screen-xxs {
+                        font-size: 13px;
+                    }
+
                     >p {
                         // height: 40px;
                         // line-height: 38px;
                         padding: 10px 22px;
                         background-color: #fff;
                         border-bottom: 2px solid #888;
+
+                        @include screen-xxs {
+                            padding-left: 10px;
+                            padding-right: 10px;
+                        }
 
                         &:nth-child(1) {
                             text-align: center;
@@ -172,18 +200,39 @@
                     }
                 }
 
-                .picture {
-                    font-size: 0;
-                    display: flex;
-                    flex-wrap: wrap;
-                    justify-content: space-between;
+                .picture-list {
+                    .slick-dots {
+                        bottom: -25px;
+                    }
+
+                    .slick-dots li {
+                        width: 11px;
+                        height: 11px;
+                        margin: 0 3px;
+                    }
+
+                    .slick-dots li button {
+                        width: 100%;
+                        height: 100%;
+                        padding: 0;
+                    }
+
+                    .slick-dots li button:before {
+                        opacity: 1;
+                        border: 0;
+                        background-color: #ccc;
+                    }
+
+                    .slick-dots li.slick-active button:before {
+                        background-color: $c-inquiry-brown;
+                    }
+
+                    .picture-item {
+                        padding: 0 2.5px;
+                    }
 
                     img {
-                        width: 540px;
-
-                        &:nth-child(2)~img {
-                            margin-top: 35px;
-                        }
+                        // width: 540px;
                     }
                 }
             }
@@ -192,7 +241,7 @@
 
     &.inquiry-sale-sec {
         // background-color: #1F1F77;
-        background: url(/img/landing/inquiry/sale/ptn.jpg) repeat;
+        background: url(http://img.monopalace.com/landing/inquiry/sale/ptn.jpg) repeat;
 
         // background-color: #191967;
         .sale-wrapper {
@@ -261,12 +310,22 @@
                 }
 
                 .picture-1 {
-                    padding: 0 30px;
+
+                    // padding: 0 30px;
+                    >img {
+                        width: calc(100% - 60px);
+                        max-width: calc(539px - 60px);
+                    }
                 }
 
                 .picture-2 {
                     margin-top: 5px;
-                    padding: 0 10px;
+
+                    // padding: 0 10px;
+                    >img {
+                        width: calc(100% - 20px);
+                        max-width: 539px;
+                    }
                 }
             }
 
@@ -289,6 +348,16 @@
 
                     &:nth-child(2) {
                         font-size: 15px;
+                    }
+
+                    @include screen-xxs {
+                        &:nth-child(1) {
+                            font-size: 18px;
+                        }
+
+                        &:nth-child(2) {
+                            font-size: 13px;
+                        }
                     }
                 }
             }
@@ -321,14 +390,19 @@
                                 justify-content: space-between;
 
                                 .el {
+                                    $space: 9px;
+
+                                    @include screen-xxs {
+                                        $space: 5px;
+                                    }
 
                                     &:nth-child(1) {
                                         // margin-right: 20px;
-                                        width: calc(55% - 10px);
+                                        width: calc(55% - #{$space});
                                     }
 
                                     &:nth-child(2) {
-                                        width: calc(45% - 10px);
+                                        width: calc(45% - #{$space});
                                     }
                                 }
                             }
@@ -442,7 +516,7 @@
             padding: 0 15px;
             height: 345px;
             box-sizing: border-box;
-            background: url(/img/landing/inquiry/prefer/bg.png) no-repeat center / cover;
+            background: url(http://img.monopalace.com/landing/inquiry/prefer/bg.png) no-repeat center / cover;
 
             .prefer-content {
                 padding: 10px 0 15px;
