--- a/monopalace/src/assets/sass/landing/_common.scss
+++ b/monopalace/src/assets/sass/landing/_common.scss
@@ -202,94 +202,24 @@ footer {
     }
 
     .landing-footer#footer {
-        clear: both;
-        width: 100%;
-        padding: 10px 0 120px;
-        height: initial;
+        padding: 15px 0 120px;
         background-color: #efefef;
 
-        #f_contents {
-            // width: 1024px;
+        .footer-area {
+            display: flex;
             width: $screen-lg-width;
-            margin: auto;
-        }
+            margin: 0 auto;
+            line-height: 1.3;
+            color: #666666;
+            font-weight: 300;
 
-        #f_contents h2 {
-            float: left;
-            width: 120px;
-            margin-top: 16px;
-            text-align: left;
-        }
+            .logo {
+                width: 120px;
+            }
 
-        #f_contents .tel {
-            font-size: 15px;
-            color: #997c47;
-            line-height: 2;
-            // font-weight: 600;
-        }
-
-        #f_contents .address {
-            float: left;
-            font-size: 11px;
-            margin-top: 10px;
-            line-height: 1.2;
-            color: #717171;
-        }
-
-        #f_contents p img {
-            margin-top: 15px;
-        }
-
-        #f_contents p .footer_mono {
-            color: #8f6c30;
-        }
-
-        #f_contents h3 {
-            float: left;
-            width: 120px;
-            text-align: center;
-            margin-top: 18px;
-            margin-top: 35px;
-        }
-
-        #family_site {
-            margin-top: 35px;
-            width: 120px;
-            position: relative;
-            float: right;
-            font-size: 12px;
-        }
-
-        #family_list {
-            border: 1px solid #dddddd;
-            min-height: 200px;
-            display: none;
-            position: absolute;
-            bottom: 20px;
-            left: 0;
-            border-bottom: none;
-            background: #ffffff;
-            box-sizing: border-box;
-        }
-
-        #family_list .fam_btn {
-            padding: 0px 3px 0px 3px;
-            cursor: hand;
-            height: 20px;
-            width: 100%;
-        }
-
-        .fam_btn_m {
-            width: 100%;
-            height: 20px;
-            line-height: 20px;
-            background: #ffffff;
-            border: 1px solid #dddddd;
-            box-sizing: border-box;
-
-            >a {
-                display: block;
-                // text-align: center;
+            .address {
+                margin-top: 5px;
+                font-size: 12px;
             }
         }
     }
@@ -345,6 +275,7 @@ footer {
                 }
 
                 >a {
+                    position: relative;
                     display: flex;
                     align-items: center;
                     justify-content: center;
