--- a/monopalace/src/assets/sass/landing/contents.min.scss
+++ b/monopalace/src/assets/sass/landing/contents.min.scss
@@ -355,6 +355,7 @@
 
                             img {
                                 display: block;
+                                width: 567px;
 
                                 &:not(:first-child) {
                                     margin-top: 20px;
